drop special CSS for document tables, remove extra spacing, fixes #1728
Closes #1728

Merge request studip/studip!1126

--- a/resources/assets/stylesheets/less/files.less
+++ b/resources/assets/stylesheets/less/files.less
@@ -429,31 +429,9 @@ form.default fieldset.select_terms_of_use {
 }
 
 table.documents {
-    td, th {
-        vertical-align: top;
-
-        &:first-child {
-            padding-left: 8px;
-        }
-    }
-
     tr:target {
         background-color: @activity-color-20;
     }
-
-    tbody.subfolders tr, tbody.files tr {
-        height: 43px;
-    }
-}
-
-
-/*
-For the file and folder table in the selection dialogs
-when adding a file or copying/moving things:
-*/
-td.document-icon {
-    max-width: 40px;
-    width: 40px;
 }
 
 
